--- a/newTab/links.html
+++ b/newTab/links.html
@@ -4,7 +4,7 @@
     <head>
         <title>knstntnwltr</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/material-dark.css">
+        <link rel="stylesheet" href="css/links-dark.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
     </head>
