--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="container">
 
                     <a class="cardlink" href="https://github.com/knstntnwltr">GitHub-Profile</a>
-                    <a class="cardlink" href="https://instagr.am/knstntnwltr">Instagram</a>
+                    <a class="cardlink" href="https://www.instagram.com/knstntnwltr/">Instagram</a>
 
                 </div>
             </div>
