--- a/newtab/index.html
+++ b/newtab/index.html
@@ -92,6 +92,7 @@
             
             <a class="card" href="http://amazon.de">Amazon</a>
             <a class="card" href="http://ebay.de">eBay</a>
+            <a class="card" href="https://github.com/knstntnwltr">Github-Profile</a>
             <a class="card" href="http://instagram.com">Instagram</a>
             <a class="card" href="https://www.netflix.com/browse">Netflix</a>
             <a class="card" href="https://www.reddit.com">Reddit</a>
