--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>knstntnwltr</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#bf2633">
         <link rel="stylesheet" href="index.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
