--- a/newtab/index.html
+++ b/newtab/index.html
@@ -133,6 +133,7 @@
             <a class="card" href="http://alternativeto.net/">AlternativeTo</a>
             <a class="card" href="https://de.wikipedia.org/wiki/Liste_mathematischer_Symbole">Wiki: Latexsymbole</a>
             <a class="card" href="https://discard.email">discard.email</a>
+            <a class="card" href="https://codehubplatform.github.io/EnglishWebContent/">CodeHub</a>
             
         </div>
         
