--- a/newtab/index.html
+++ b/newtab/index.html
@@ -123,6 +123,7 @@
             <a class="card" href="https://isis.tu-berlin.de">ISIS</a>
             <a class="card" href="https://www.mydesk.tu-berlin.de/">MyDesk</a>
             <a class="card" href="https://teaching.inet.tu-berlin.de/services/osiris-sose17/">OSIRIS</a>
+            <a class="card" href="https://gitlab.tubit.tu-berlin.de/">GitLab</a>
             
             
         </div>
