--- a/snake/index.html
+++ b/snake/index.html
@@ -51,6 +51,7 @@
             ctx.fillRect(trail[i].x * gs, trail[i].y * gs, gs - 2, gs - 2);
             if (trail[i].x == px && trail[i].y == py) {
                 tail = 5;
+                pts.innerHTML=(tail-5);
             }
         }
         trail.push({x: px, y: py});
@@ -60,7 +61,7 @@
 
         if (ax == px && ay == py) {
             tail += 4;
-            pts.innerHTML=""+tail;
+            pts.innerHTML=(tail-5);
             ax = Math.floor(Math.random() * tc);
             ay = Math.floor(Math.random() * tc);
         }
