--- a/newtab/index.html
+++ b/newtab/index.html
@@ -193,9 +193,9 @@
             <a class="card" href="https://oneplus.net/de/">Oneplus</a>
             <a class="card" href="http://downloads.oneplus.net/">Oneplus Downloads</a>
             <a class="card" href="http://opengapps.org/">OpenGapps</a>
-            <a class="card" href="https://twrp.me/devices/oneplusthree.html">TWRP: Oneplus 3</a>
+            <a class="card" href="https://twrp.me/devices/oneplus5.html">TWRP: Oneplus 5</a>
             <a class="card" href="http://xda-developers.com">XDA-Developers</a>
-            <a class="card" href="http://forum.xda-developers.com/oneplus-3">XDA: Oneplus 3</a>
+            <a class="card" href="https://forum.xda-developers.com/oneplus-5">XDA: Oneplus 5</a>
             
         </div>
         
