--- a/mass/index.html
+++ b/mass/index.html
@@ -5,7 +5,7 @@
     <title>Maßstab</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#bf2633">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="mass.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
 </head>
 <body>
@@ -26,6 +26,7 @@
     <p>Ergebnis in cm</p>
     <h2 id="res">0</h2>
 </div>
+<a>V1.02</a>
 </body>
 <script type="application/javascript">
     function calc() {
