--- a/mass/index.html
+++ b/mass/index.html
@@ -37,7 +37,7 @@
         }
 
         input {
-            width: calc(100% - 8px);
+            /*width: calc(100% - 8px);*/
         }
         button {
             width: 100%;
