--- a/mass/index.html
+++ b/mass/index.html
@@ -35,7 +35,7 @@
         }
 
         input {
-            width: calc(100% - 8px);
+            width: calc(100% - 16px);
             font-size: 16px;
         }
         button {
@@ -86,7 +86,7 @@
             <p>Ergebnis in cm</p>
             <h2 id="res">0</h2>
         </div>
-        <a id="version">V1.07</a>
+        <a id="version">V1.07b</a>
     </body>
 
     <script type="application/javascript">
