mass 1.07c button color white

--- a/mass/index.html
+++ b/mass/index.html
@@ -55,6 +55,7 @@
         .subm {
             width: 100%;
             background: #DD6633;
+            color: #ffffff;
             margin: 20px 0 0 0;
             padding: 10px 30px;
             cursor: pointer;
@@ -86,7 +87,7 @@
             <p>Ergebnis in cm</p>
             <h2 id="res">0</h2>
         </div>
-        <a id="version">V1.07b</a>
+        <a id="version">V1.07c</a>
     </body>
 
     <script type="application/javascript">
