--- a/mass/index.html
+++ b/mass/index.html
@@ -8,6 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#bf2633">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="DD6633">
     </head>
 
     <style>
@@ -87,7 +89,7 @@
             <p>Ergebnis in cm</p>
             <h2 id="res">0</h2>
         </div>
-        <a id="version">V1.07c</a>
+        <a id="version">V1.10a</a>
     </body>
 
     <script type="application/javascript">
