mass 1.10b icon fix?

--- a/mass/index.html
+++ b/mass/index.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="DD6633">
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
     </head>
 
     <style>
@@ -89,7 +90,7 @@
             <p>Ergebnis in cm</p>
             <h2 id="res">0</h2>
         </div>
-        <a id="version">V1.10a</a>
+        <a id="version">V1.10b</a>
     </body>
 
     <script type="application/javascript">
