--- a/mass/index.html
+++ b/mass/index.html
@@ -15,15 +15,24 @@
 
     <style>
         html {
+            margin: 0;
             text-align: center;
         }
         body {
             margin: 0;
             background: #eeeeee;
-            padding: 8px;
             max-width: 800px;
             font-family: Roboto;
             font-size: 16px;
+        }
+
+        h1 {
+            text-align: left;
+            margin: 0;
+            padding: 16px 0 16px 24px;
+            width: calc(100% - 24px);
+            background: #DD6633;
+            color: #ffffff;
         }
 
         .card {
@@ -38,7 +47,7 @@
         }
 
         input {
-            width: calc(100% - 18px);
+            width: calc(100% - 8px);
             font-size: 16px;
         }
         button {
@@ -71,6 +80,8 @@
 
     <body>
 
+        <h1>Maßstab</h1>
+
         <div class="card">
             <label for="val">Momentane Länge in cm?</label><br>
             <input type="number" id="val">
@@ -90,7 +101,7 @@
             <p>Ergebnis in cm</p>
             <h2 id="res">0</h2>
         </div>
-        <a id="version">V1.10d</a>
+        <a id="version">V1.11a</a>
     </body>
 
     <script type="application/javascript">
