--- a/mass/index.html
+++ b/mass/index.html
@@ -47,7 +47,7 @@
         }
 
         input {
-            width: calc(100% - 8px);
+            width: calc(100% - 16px);
             font-size: 16px;
         }
         button {
@@ -101,7 +101,7 @@
             <p>Ergebnis in cm</p>
             <h2 id="res">0</h2>
         </div>
-        <a id="version">V1.11a</a>
+        <a id="version">V1.11b</a>
     </body>
 
     <script type="application/javascript">
