mass 1.11c statusbar-color

--- a/mass/index.html
+++ b/mass/index.html
@@ -9,7 +9,7 @@
         <meta name="theme-color" content="#bf2633">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="#eeeeee">
+        <meta name="apple-mobile-web-app-status-bar-style" content="#dd6633">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
     </head>
 
@@ -101,7 +101,7 @@
             <p>Ergebnis in cm</p>
             <h2 id="res">0</h2>
         </div>
-        <a id="version">V1.11b</a>
+        <a id="version">V1.11c</a>
     </body>
 
     <script type="application/javascript">
