--- a/mass/index.html
+++ b/mass/index.html
@@ -9,7 +9,7 @@
         <meta name="theme-color" content="#bf2633">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="#dd6633">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
     </head>
 
@@ -17,6 +17,7 @@
         html {
             margin: 0;
             text-align: center;
+            background: #DD6633;
         }
         body {
             margin: 0;
@@ -24,6 +25,7 @@
             max-width: 800px;
             font-family: Roboto;
             font-size: 16px;
+            height: 100vh;
         }
 
         h1 {
@@ -101,7 +103,7 @@
             <p>Ergebnis in cm</p>
             <h2 id="res">0</h2>
         </div>
-        <a id="version">V1.11c</a>
+        <a id="version">V1.20a</a>
     </body>
 
     <script type="application/javascript">
